--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "Challenge 9",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Long Yang",
+  "license": "MIT",
   "dependencies": {
     "inquirer": "8.2.4"
   }
